--- a/assets/images/sprites/preview.html
+++ b/assets/images/sprites/preview.html
@@ -33,6 +33,7 @@
 			<pre><code>.icon-card-icon:</code></pre><div class="icon-card-icon" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-caret-left:</code></pre><div class="icon-caret-left" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-caret-right:</code></pre><div class="icon-caret-right" style="width: 180px; height: 180px;" ></div><hr/>
+			<pre><code>.icon-cart:</code></pre><div class="icon-cart" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-check-icon2:</code></pre><div class="icon-check-icon2" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-check:</code></pre><div class="icon-check" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-chevron-down-default:</code></pre><div class="icon-chevron-down-default" style="width: 180px; height: 180px;" ></div><hr/>
