--- a/assets/images/sprites/preview.html
+++ b/assets/images/sprites/preview.html
@@ -22,6 +22,7 @@
 	<body>
 
 		<h1>CUSTOM PREVIEW - you can change this in the previewTemplate option</h1>
+			<pre><code>.icon-apple_pay:</code></pre><div class="icon-apple_pay" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-arrow-left:</code></pre><div class="icon-arrow-left" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-arrow-right:</code></pre><div class="icon-arrow-right" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-badge-icon:</code></pre><div class="icon-badge-icon" style="width: 180px; height: 180px;" ></div><hr/>
@@ -53,6 +54,7 @@
 			<pre><code>.icon-filter:</code></pre><div class="icon-filter" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-gift:</code></pre><div class="icon-gift" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-globus:</code></pre><div class="icon-globus" style="width: 180px; height: 180px;" ></div><hr/>
+			<pre><code>.icon-google_pay:</code></pre><div class="icon-google_pay" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-header_phone:</code></pre><div class="icon-header_phone" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-home:</code></pre><div class="icon-home" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-hpower:</code></pre><div class="icon-hpower" style="width: 180px; height: 180px;" ></div><hr/>
@@ -75,6 +77,7 @@
 			<pre><code>.icon-mail:</code></pre><div class="icon-mail" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-map-pin:</code></pre><div class="icon-map-pin" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-map:</code></pre><div class="icon-map" style="width: 180px; height: 180px;" ></div><hr/>
+			<pre><code>.icon-mastercard:</code></pre><div class="icon-mastercard" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-microbus:</code></pre><div class="icon-microbus" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-minivan:</code></pre><div class="icon-minivan" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-minus-icon:</code></pre><div class="icon-minus-icon" style="width: 180px; height: 180px;" ></div><hr/>
@@ -110,6 +113,7 @@
 			<pre><code>.icon-tv-console:</code></pre><div class="icon-tv-console" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-upload-icon:</code></pre><div class="icon-upload-icon" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-user:</code></pre><div class="icon-user" style="width: 180px; height: 180px;" ></div><hr/>
+			<pre><code>.icon-visa:</code></pre><div class="icon-visa" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-vk:</code></pre><div class="icon-vk" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-way-icon:</code></pre><div class="icon-way-icon" style="width: 180px; height: 180px;" ></div><hr/>
 			<pre><code>.icon-whatsapp:</code></pre><div class="icon-whatsapp" style="width: 180px; height: 180px;" ></div><hr/>
